For details of when a commit makes it into the stable branch see the ReleaseNotes file.

2016-05-08 niel
	Mrg: Changing table 'category' to 'categories' along with references to categoryid => categories_id.
		**NOTE** This involves changes to your releases table. It will take some time,
		potentially a very long time, depending on the number of releases you have.
2016-05-07 niel
	Chg: alter subsection,name fields to settings for recaptcha.
	Mrg: PR 2135, from zetas - Fix Recaptcha settings.
	Fix: Reference to configuration file/location for IRC Scraper in tmux-edit.tpl.
2016-05-06 DariusIII
	Fix: Missing use statement for Category class in admin pages.
2016-05-06 bart39
	Fix: TV categorization mismatches.
		** NOTE *** - you will need to do the following to fix the categorization:
		`php /var/www/nZEDb/misc/testing/Release/recategorize.php all`
		this will take a while to complete.
2016-05-06 DariusIII
	Upd: Comment out max_matches(deprecated since sphinx 2.2.3) and change sphinx.pid location to proper /var/run/sphinxsearch/searchd.pid
2016-05-05 niel
	Mrg: PR 2121, from meganomic - Yahoo search fix.
2016-05-05 bart39
	Fix: update collection regex in a.b.mom
	Fix: Missing escape on release triggers.
2016-05-03 niel
	Fix: Force li3 connections to ignore Host/Port settings if a socket is provided.
	Mrg: Add 'composer install' instruction to ReleaseNotes (PR 2128).
	Fix: Reinstate the LINES TERMINATED BY clause to loading data files to override default
	behaviour of only using '\n' instead of '\r\n' that we need (Closes Issue 2104).
2016-05-02 bart39
	Mrg: PR 2127, from rainje - New release name format not matched with reqid
	Chg: update schema and replace triggers for above PR.
2016-04-30
	Mrg: dev => Latest-testing to prepare for updating stable 0.x.


2016-05-03 niel
	Mrg: Add 'composer install' instruction to ReleaseNotes (PR 2128).
2016-04-28 niel
	Fix: Code style foramtting.