@@ -64,7 +64,7 @@ $releases = $pdo->queryDirect(
 		COALESCE(pre.num, 0) AS pre_matches,
 		COALESCE(ren.num, 0) AS renamed FROM groups
 		LEFT OUTER JOIN ( SELECT group_id, COUNT(id) AS num FROM releases GROUP BY group_id ) rel ON rel.group_id = groups.id
-		LEFT OUTER JOIN ( SELECT group_id, COUNT(id) AS num FROM releases WHERE preid > 0 GROUP BY group_id ) pre ON pre.group_id = groups.id
+		LEFT OUTER JOIN ( SELECT group_id, COUNT(id) AS num FROM releases WHERE predb_id > 0 GROUP BY group_id ) pre ON pre.group_id = groups.id
 		LEFT OUTER JOIN ( SELECT group_id, COUNT(id) AS num FROM releases WHERE iscategorized = 1 GROUP BY group_id ) ren ON ren.group_id = groups.id
 		WHERE active = 1 AND first_record_postdate %s %s %s", $order, $sort, $limit
 	)
