@@ -32,7 +32,7 @@ function getPreName($argv)
 
 	$res = false;
 	if (isset($argv[1]) && $argv[1] === "all") {
-		$res = $pdo->queryDirect('SELECT id AS releaseid, name, searchname, group_id, categories_id, dehashstatus FROM releases WHERE preid = 0 AND ishashed = 1');
+		$res = $pdo->queryDirect('SELECT id AS releaseid, name, searchname, group_id, categories_id, dehashstatus FROM releases WHERE predb_id = 0 AND ishashed = 1');
 	} else if (isset($argv[1]) && $argv[1] === "full") {
 		$res = $pdo->queryDirect('SELECT id AS releaseid, name, searchname, group_id, categories_id, dehashstatus FROM releases WHERE categories_id = ' .
 				Category::OTHER_HASHED . ' AND ishashed = 1 AND dehashstatus BETWEEN -6 AND 0');
