@@ -97,7 +97,7 @@ if (!isset($argv[1])) {
 
 	} else if (isset($pieces[1]) && $pieces[0] == 'predbft') {
 		$pre = $pieces[1];
-		if ($res = $pdo->queryOneRow(sprintf('SELECT id AS preid, title, source, searched FROM predb '
+		if ($res = $pdo->queryOneRow(sprintf('SELECT id AS predb_id, title, source, searched FROM predb '
 							. 'WHERE id = %d', $pre))) {
 			$namefixer->done = $namefixer->matched = false;
 			$ftmatched = $searched = 0;
@@ -111,7 +111,7 @@ if (!isset($argv[1])) {
 				$searched = $res['searched'] - 1;
 				echo ".";
 			}
-			$pdo->queryExec(sprintf("UPDATE predb SET searched = %d WHERE id = %d", $searched, $res['preid']));
+			$pdo->queryExec(sprintf("UPDATE predb SET searched = %d WHERE id = %d", $searched, $res['predb_id']));
 			$namefixer->checked++;
 		}
 
