@@ -32,7 +32,7 @@ if (!isset($argv[1])) {
 								AND r.nzbstatus = 1
 								AND r.proc_nfo = 0
 								AND r.nfostatus = 1
-								AND r.preid = 0
+								AND r.predb_id = 0
 								ORDER BY r.postdate DESC
 								LIMIT %s',
 								$pdo->likeString($guidChar, false, true),
@@ -66,7 +66,7 @@ if (!isset($argv[1])) {
 								INNER JOIN release_files rf ON r.id = rf.releaseid
 								WHERE r.guid %s
 								AND r.nzbstatus = 1 AND r.proc_files = 0
-								AND r.preid = 0
+								AND r.predb_id = 0
 								ORDER BY r.postdate ASC
 								LIMIT %s',
 								$pdo->likeString($guidChar, false, true),
@@ -94,7 +94,7 @@ if (!isset($argv[1])) {
 								WHERE r.guid %s
 								AND nzbstatus = 1 AND r.ishashed = 1
 								AND r.dehashstatus BETWEEN -6 AND 0
-								AND r.preid = 0
+								AND r.predb_id = 0
 								ORDER BY r.dehashstatus DESC, r.postdate ASC
 								LIMIT %s',
 								$pdo->likeString($guidChar, false, true),
@@ -123,7 +123,7 @@ if (!isset($argv[1])) {
 								WHERE r.guid %s
 								AND r.nzbstatus = 1
 								AND r.proc_par2 = 0
-								AND r.preid = 0
+								AND r.predb_id = 0
 								ORDER BY r.postdate ASC
 								LIMIT %s',
 								$pdo->likeString($guidChar, false, true),
@@ -160,7 +160,7 @@ if (!isset($argv[1])) {
 								WHERE r.guid %s
 								AND r.nzbstatus = 1 AND r.nfostatus = 1
 								AND r.proc_sorter = 0 AND r.isrenamed = 0
-								AND r.preid = 0
+								AND r.predb_id = 0
 								ORDER BY r.postdate DESC
 								LIMIT %s',
 								$pdo->likeString($guidChar, false, true),
@@ -178,7 +178,7 @@ if (!isset($argv[1])) {
 		case $pieces[0] === 'predbft' && isset($maxperrun) && is_numeric($maxperrun) && isset($thread) && is_numeric($thread):
 			$pres = $pdo->queryDirect(
 						sprintf('
-							SELECT p.id AS preid, p.title, p.source, p.searched
+							SELECT p.id AS predb_id, p.title, p.source, p.searched
 							FROM predb p
 							WHERE LENGTH(title) >= 15 AND title NOT REGEXP "[\"\<\> ]"
 							AND searched = 0
@@ -205,7 +205,7 @@ if (!isset($argv[1])) {
 						$searched = $pre['searched'] - 1;
 						echo ".";
 					}
-					$pdo->queryExec(sprintf("UPDATE predb SET searched = %d WHERE id = %d", $searched, $pre['preid']));
+					$pdo->queryExec(sprintf("UPDATE predb SET searched = %d WHERE id = %d", $searched, $pre['predb_id']));
 					$namefixer->checked++;
 				}
 			}
