@@ -73,10 +73,10 @@ class PreDb
 
 		$res = $this->pdo->queryDirect(
 						sprintf('
-							SELECT p.id AS preid, r.id AS releaseid
+							SELECT p.id AS predb_id, r.id AS releaseid
 							FROM predb p
 							INNER JOIN releases r ON p.title = r.searchname
-							WHERE r.preid < 1 %s',
+							WHERE r.predb_id < 1 %s',
 							$datesql
 						)
 		);
@@ -88,7 +88,7 @@ class PreDb
 			if ($res instanceof \Traversable) {
 				foreach ($res as $row) {
 					$this->pdo->queryExec(
-						sprintf('UPDATE releases SET preid = %d WHERE id = %d', $row['preid'], $row['releaseid'])
+						sprintf('UPDATE releases SET predb_id = %d WHERE id = %d', $row['predb_id'], $row['releaseid'])
 					);
 
 					if ($this->echooutput) {
@@ -130,7 +130,7 @@ class PreDb
 		if ($titleCheck !== false) {
 			return [
 				'title' => $cleanerName,
-				'preid' => $titleCheck['id']
+				'predb_id' => $titleCheck['id']
 			];
 		}
 
@@ -142,7 +142,7 @@ class PreDb
 		if ($fileCheck !== false) {
 			return [
 				'title' => $fileCheck['title'],
-				'preid' => $fileCheck['id']
+				'predb_id' => $fileCheck['id']
 			];
 		}
 
@@ -189,7 +189,7 @@ class PreDb
 			$query = sprintf('SELECT r.id AS releaseid, r.name, r.searchname, r.categories_id, r.group_id, '
 				. 'dehashstatus, rf.name AS filename FROM releases r '
 				. 'LEFT OUTER JOIN release_files rf ON r.id = rf.releaseid '
-				. 'WHERE nzbstatus = 1 AND dehashstatus BETWEEN -6 AND 0 AND preid = 0 %s', $regex);
+				. 'WHERE nzbstatus = 1 AND dehashstatus BETWEEN -6 AND 0 AND predb_id = 0 %s', $regex);
 		} else {
 			$query = sprintf('SELECT r.id AS releaseid, r.name, r.searchname, r.categories_id, r.group_id, '
 				. 'dehashstatus, rf.name AS filename FROM releases r '
@@ -247,7 +247,7 @@ class PreDb
 		$sql = sprintf('
 			SELECT p.*, r.guid
 			FROM predb p
-			LEFT OUTER JOIN releases r ON p.id = r.preid %s
+			LEFT OUTER JOIN releases r ON p.id = r.predb_id %s
 			ORDER BY p.predate DESC
 			LIMIT %d
 			OFFSET %d',
