@@ -1060,7 +1060,7 @@ class ReleaseRemover
 			AND nfostatus = 1
 			AND haspreview = 0
 			AND jpgstatus = 0
-			AND preid = 0
+			AND predb_id = 0
 			AND videostatus = 0
 			AND
 			(
